# drem-canvas

./: .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  PRD.md  install-kilohearts.sh  libs  session-notes-2026-02-26.md
.claude/: settings.json
.claude/commands/: bnl.md  build.md  e2e.md  merge.md  run.md  status.md  test.md  verify.md  worktree.md
assets/: com.drem.canvas.desktop
config/: default_keymap.yaml
docs/: arrangement-PRD.md  benchmarking-strategy.md  code-analysis-criteria.md  plugin-parameter-finder.md  vulkan-linux.md
docs/e2e-testing/: 00-strategy.md  01-tier1-smoke.md  02-tier2-load-project.md  03-tier3-visual-scan.md  04-implementation-plan.md
docs/e2e-testing/prompts/: 01-smoke-flag.md  README.md  (+4 more)
docs/fix-plugin-list-empty/: design.md
docs/plugin-loading-fixes/: 00-prd.md
docs/sans-juce/: 00-prd.md  01-observable-model.md  02-audio-graph.md  03-plugin-hosting.md  04-foundation-types.md  05-audio-io.md  06-midi-subsystem.md  07-undo-system.md  08-migration-guide.md
docs/test-harness/: 00-prd.md  01-cmake-infrastructure.md  02-migration-tests.md  03-architecture-guards.md  04-agent-management.md  05-integration-and-advanced.md
plans/: mixer-maximize-toggle.md  sequencer-zoom-plan.md  test-harness.md
prompts/fix-wiggle-detection/: 00-overview.md  01-add-wiggle-debug-logging.md  02-investigate-yabridge-setparam-timing.md  03-implement-mouse-probe-wiggle.md
scripts/: app-ctl.sh  bootstrap.sh  build_skia.sh  check_architecture.sh  check_deps.sh  install-harmor.sh  install-kilohearts.sh  quick-check.sh  verify.sh
scripts/juce-patches/: 0001-Add-IParameterFinder-and-performEdit-snoop-patches.patch
src/: Main.cpp
src/engine/: AudioEngine.cpp  AudioEngine.h  AudioRecorder.cpp  AudioRecorder.h  BounceProcessor.cpp  BounceProcessor.h  MeterTapProcessor.cpp  MeterTapProcessor.h  MetronomeProcessor.cpp  MetronomeProcessor.h  MidiBridge.h  MidiClipProcessor.cpp  MidiClipProcessor.h  MidiEngine.cpp  MidiEngine.h  MixBusProcessor.cpp  MixBusProcessor.h  PluginProcessorNode.h  SimpleSynthProcessor.h  StepSequencerProcessor.cpp  StepSequencerProcessor.h  TrackProcessor.cpp  TrackProcessor.h  TransportController.cpp  TransportController.h
src/gui/: MainComponent.cpp  MainComponent.h  MainWindow.cpp  MainWindow.h
src/model/: Arrangement.cpp  Arrangement.h  AudioClip.cpp  AudioClip.h  Clipboard.cpp  Clipboard.h  GridSystem.cpp  GridSystem.h  MidiClip.cpp  MidiClip.h  MixerState.cpp  MixerState.h  Project.cpp  Project.h  RecentProjects.cpp  RecentProjects.h  StepSequencer.cpp  StepSequencer.h  TempoMap.cpp  TempoMap.h  Track.cpp  Track.h
src/platform/: EventBridge.h  EventBridge.mm  MacPluginEditorBridge.h  MacPluginEditorBridge.mm  MacSyntheticInputProbe.h  MacSyntheticInputProbe.mm  MacSyntheticMouseDrag.h  MacSyntheticMouseDrag.mm  MetalView.h  MetalView.mm  NativeDialogs.h  NativeDialogs.mm  NativeWindow.h  NativeWindow.mm
src/plugins/: MouseEventForwarder.cpp  MouseEventForwarder.h  ParameterFinderScanner.cpp  ParameterFinderScanner.h  PluginEditorBridge.cpp  PluginEditorBridge.h  PluginHost.cpp  PluginHost.h  PluginManager.cpp  PluginManager.h  PluginWindowManager.cpp  PluginWindowManager.h  SpatialScanCache.cpp  SpatialScanCache.h  SyntheticInputProbe.cpp  SyntheticInputProbe.h  SyntheticMouseDrag.cpp  SyntheticMouseDrag.h  VST3ParameterFinderSupport.h
src/ui/: AppController.cpp  AppController.h
src/utils/: AudioFileUtils.cpp  AudioFileUtils.h  GitIntegration.cpp  GitIntegration.h  UndoSystem.cpp  UndoSystem.h
src/vim/: ActionRegistry.cpp  ActionRegistry.h  ContextAdapter.h  KeySequence.cpp  KeySequence.h  KeymapRegistry.cpp  KeymapRegistry.h  VimContext.cpp  VimContext.h  VimEngine.cpp  VimEngine.h  VimGrammar.cpp  VimGrammar.h  VirtualKeyboardState.h
tests/: CMakeLists.txt
tests/e2e/: e2e_display.sh  test_auto_scan.sh  test_browser_async_scan.sh  test_browser_scan.sh  test_load_project.sh  test_phase_plant.sh  test_phase_plant_routing.sh  test_phase_plant_scan.sh  test_scan_cold.sh  test_scan_warm.sh  test_smoke.sh  test_state_restore.sh
tests/fixtures/e2e-phase-plant/: capture.sh  session.yaml  track-0.yaml
tests/fixtures/e2e-phase-plant-routing/: capture.sh  track-0.yaml
tests/fixtures/e2e-plugin-project/: track-0.yaml  track-1.yaml
tests/fixtures/e2e-scan-project/: track-0.yaml
tests/fixtures/e2e-state-restore/: capture.sh  session.yaml  track-0.yaml  track-1.yaml
tests/integration/: main.cpp  test_action_registry.cpp  test_arrangement.cpp  test_audio_graph.cpp  test_parameter_changes.cpp  test_plugin_process_context.cpp  test_project.cpp  test_session_roundtrip.cpp  test_track.cpp  test_transport.cpp  test_vim_commands.cpp  test_vim_context.cpp
tests/integration/juce_shim/: JuceHeader.h
tests/regression/: README.md  issue_001_multi_yabridge_load.cpp  issue_001_uid_from_file_path.cpp  issue_002_juce_state_format.cpp  issue_003_set_state_deactivation.cpp  issue_004_teardown_sigsegv.cpp  issue_005_set_state_setup_processing.cpp  issue_006_phase_plant_blocked.cpp
tests/unit/: test_PluginManager_async.cpp  test_ProgressBarWidget.cpp  test_async_scan.cpp  test_auto_scan_trigger.cpp  test_plugin_scanner.cpp  test_probecache_scan_filter.cpp
tests/unit/audio/: test_audio_block.cpp  test_audio_file_io.cpp  test_disk_streamer.cpp  test_threaded_recorder.cpp
tests/unit/foundation/: test_base64.cpp  test_colour.cpp  test_listener_list.cpp  test_message_queue.cpp  test_random.cpp  test_spsc_queue.cpp  test_string_utils.cpp  test_worker_thread.cpp
tests/unit/midi/: test_midi_buffer.cpp  test_midi_message.cpp  test_midi_sequence.cpp
tests/unit/model/: test_property_id.cpp  test_property_tree.cpp  test_undo_manager.cpp  test_variant.cpp
tests/unit/model_layer/: test_clipboard.cpp  test_grid_system.cpp  test_tempo_map.cpp
tests/unit/plugins/: test_cc_to_param_translation.cpp  test_plugin_description.cpp  test_plugin_instance_bypass.cpp  test_probe_cache.cpp  test_vst3_module.cpp  test_yabridge_scan.cpp
tests/unit/vim/: test_key_sequence.cpp  test_keymap_registry.cpp  test_vim_grammar.cpp
(+342 files in other folders)
